--- a/css/styles.css
+++ b/css/styles.css
@@ -259,7 +259,7 @@ img {
 
 .modal {
   width: 408px;
-  height: 576px;
+  min-height: 576px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -269,6 +269,7 @@ img {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   transition: transform var(--transition-func), opacity var(--transition-func);
+  padding: 72px 24px 24px 24px;
 }
 
 .btn-modal-close {
@@ -302,144 +303,86 @@ img {
 /*  ------------------- Modal Form ---------------------- */
 
 .modal-form {
-  /* display: block; */
-  padding: 72px 24px 24px 24px;
 }
+
 .modal-form-title {
   font-weight: 500;
   font-size: 16px;
-  line-height: 24px;
-  /* identical to box height, or 150% */
-
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 16px;
 }
 
-.modal-form-list {
-}
-
-.modal-form-item {
+.modal-form-label {
+  display: block;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
 }
 
 .modal-form-icon-caption {
-  display: flex;
   align-items: center;
-}
-
-.modal-form-icon {
-  position: absolute;
-  top: 50%;
-  /* transform: translateY(-50%); */
-  left: 16px;
-  margin-right: 10px;
-}
-
-.modal-form-label {
-  font-size: 12px;
-  line-height: 16px;
-  /* identical to box height, or 133% */
-  letter-spacing: 0.04em;
-  color: #8e8f99;
-  /* display: flex;
-  flex-direction: column; */
-  position: relative;
-  margin-bottom: 8px;
-}
-
-.modal-form-comment-input {
   margin-top: 4px;
-
-  /* padding-left: 40px; */
-  padding: 8px 0 0 16px;
-  margin-right: 16px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  width: 100%;
-  height: 40px;
-}
-
-.modal-form-comment-label {
-  font-size: 12px;
-  line-height: 16px;
-  /* identical to box height, or 133% */
-  letter-spacing: 0.04em;
-  color: #8e8f99;
-  /* display: flex;
-  flex-direction: column; */
-  position: relative;
-  margin-bottom: 8px;
-}
-
-/* .modal-form-label:last-child {
-  padding: 8px 0 0 16px;
-} */
-
-.modal-form-input-caption {
-  /* display: block; */
+  
 }
 
 .modal-form-input {
   /* display: block; */
-  margin-top: 4px;
-
-  /* padding-left: 40px; */
-  margin-right: 16px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  width: 100%;
+  /* box-sizing: border-box; */
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
   height: 40px;
+ 
+  outline: none;
+  padding-left: 40px;
+  margin-bottom: 8px;
 }
 
-/* .modal-form--terms-caption {
-  display: flex;
-} */
+.modal-form-icon {
+  position: absolute;
+  /* display: flex; */
+  
 
-.modal-form-terms {
-  font-size: 12px;
-  line-height: 16px;
-  /* identical to box height, or 133% */
-  letter-spacing: 0.04em;
-  color: #757575;
 }
 
-.modal-form-privacy-policy {
+.modal-form-comment-label {
+  display: block;
   font-size: 12px;
-  line-height: 16px;
-  /* identical to box height, or 133% */
+  line-height: 14px;
+  /* identical to box height */
+  letter-spacing: 0.01em;
+  color: #8e8f99;
+}
+.modal-form-comment-input {
+  display: block;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  margin-top: 4px;
+}
+
+.modal-form-comment-input::placeholder {
+  font-size: 12px;
+  line-height: 1.33;
   letter-spacing: 0.04em;
-  text-decoration-line: underline;
-  color: #4d5ae5;
+  color: rgba(117, 117, 117, 0.5);
+  padding-top: 8px;
+  padding-left: 16px;
 }
 
 .modal-form--terms-caption {
-  margin-top: 16px;
-  margin-bottom: 24px;
 }
-
-.modal-form-checkbox {
-  margin-right: 8px;
-}
-
 .modal-form-terms {
+}
+.modal-form-checkbox {
+}
+.modal-form-privacy-policy {
 }
 
 .modal-form-btn {
-  display: block;
-  margin: 0 auto;
-  padding: 16px 32px;
-  background-color: #4d5ae5;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  color: #ffffff;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0.04em;
-  border-radius: 4px;
-  cursor: pointer;
-  text-align: center;
 }
 
 /* ------------------- ATTITUDES --------------------- section */
