--- a/css/styles.css
+++ b/css/styles.css
@@ -321,12 +321,12 @@ img {
   line-height: 1.33;
   letter-spacing: 0.04em;
   color: #8e8f99;
+  position: relative;
 }
 
 .modal-form-icon-caption {
   align-items: center;
   margin-top: 4px;
-  
 }
 
 .modal-form-input {
@@ -335,17 +335,18 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   height: 40px;
- 
+  width: 100%;
   outline: none;
   padding-left: 40px;
   margin-bottom: 8px;
+  outline: none;
 }
 
 .modal-form-icon {
   position: absolute;
+  top: 50%;
+  left: 16px;
   /* display: flex; */
-  
-
 }
 
 .modal-form-comment-label {
@@ -358,6 +359,7 @@ img {
 }
 .modal-form-comment-input {
   display: block;
+  width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -382,8 +384,6 @@ img {
   color: #757575;
 }
 .modal-form-checkbox {
-
-
 }
 .modal-form-privacy-policy {
 }
